--- a/dev/index.jade
+++ b/dev/index.jade
@@ -11,7 +11,7 @@ html(
 			+head()
 
 	body
-		.general(class='container')
+		.general(class='container-fluid')
 			block html
 				<ng-view></ng-view>
 		
