(fix(redes)):Creando redes

--- a/dev/_mixins/contact/main.jade
+++ b/dev/_mixins/contact/main.jade
@@ -40,13 +40,13 @@ mixin contact(contact)
 					)
 						option=contact.ciudad1
 						option=contact.ciudad2
-			div(form-group)
+			div(class="form-group")
 				label(class="control-label col-xs-2")=contact.dudas
 				div(class="col-xs-10")
 					textarea(
 						placeholder="Escribe un breve resumen de lo que nos quieres preguntar"
 					)
-			div(form-group)
+			div(class="form-group")
 				div(class="col-xs-offset-2 col-xs-10")
 					button(
 						type="submit"
