feat(navbar): Terminando navbar

--- a/dev/_mixins/home/h-images/main.jade
+++ b/dev/_mixins/home/h-images/main.jade
@@ -1,3 +1,3 @@
 mixin h-images()
-	.h-images(class='row')
-		img(src='img/background1.jpg')
+	.h-images.margin15(class='row')
+		img.margin-top20(src='img/background.jpg')
