--- a/dev/_mixins/home/h-images/main.styl
+++ b/dev/_mixins/home/h-images/main.styl
@@ -1,11 +1,8 @@
-.general
+.container-fluid
 	.h-images
-		margin-top 5px
-		margin-bottom 20px
-		
 		img
 			width 100%
-			height 400px
+			height 768px
 			
 
 			
