--- a/dev/css/main.styl
+++ b/dev/css/main.styl
@@ -3,3 +3,13 @@
 .general 
 	width 1366px
 
+/***********
+CONTAINER-FLUID
+***********/	
+.container-fluid 
+	.margin15
+		margin-left -15px
+		margin-right -15px
+
+	.margin-top20
+		margin-top -20px
