--- a/dev/_mixins/commons/head/main.jade
+++ b/dev/_mixins/commons/head/main.jade
@@ -10,6 +10,10 @@ mixin head()
 	)
 
 	link(
+		href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"
+	)
+
+	link(
 		rel='stylesheet'
 		type='text/css'
 		href='vendor/bootstrap/bootstrap.css'
