--- a/dev/js/directives/navbar/tpl.jade
+++ b/dev/js/directives/navbar/tpl.jade
@@ -1,11 +1,17 @@
-div(class="row")
-	div(
-		role="navigation"
-		class="navbar navbar-default"
+.my-navbar(class="row").margin15
+	nav(
+		class="nav-wrapper"
 	)
-		ul(class="nav navbar-nav")
-			li(class="active")
-				a(href="") Este es un elemento
+		a(href="#!" class="brand-logo") Logo
+		ul(class="right hide-on-med-and-down")
 			li
-				a(href="") Este es otro elemento
+				a(href="") HOME
+					i(class="material-icons left") business
+			li
+				a(href="") SERVICIOS
+					i(class="material-icons left") assignment	
+			li
+				a(href="") CONTACTO
+					i(class="material-icons left") contacts
+
 	
