fix(navbar-background):updating navbar

--- a/dev/js/directives/navbar/main.styl
+++ b/dev/js/directives/navbar/main.styl
@@ -1,14 +1,19 @@
 .container-fluid
 	.my-navbar
 		nav
-			background #26a69a
+			background #fff
+			a
+				color gray
 			ul
 				li
 					a
+						color gray
+						
 						i.material-icons
 							font-size 1.5rem
 							line-height 60px
 
 						&:hover
-							color white
+							color #3F51B5
+							background none
 			
