--- a/dev/js/directives/navbar/tpl.jade
+++ b/dev/js/directives/navbar/tpl.jade
@@ -5,13 +5,13 @@
 		a(href="#!" class="brand-logo") Logo
 		ul(class="right hide-on-med-and-down")
 			li
-				a(href="") HOME
+				a(href="") Home
 					i(class="material-icons left") business
 			li
-				a(href="") SERVICIOS
+				a(href="") Servicios
 					i(class="material-icons left") assignment	
 			li
-				a(href="") CONTACTO
+				a(href="") Contacto
 					i(class="material-icons left") contacts
 
 	
