Feat(Promotion): new promotion

--- a/dev/_mixins/home/h-images/main.jade
+++ b/dev/_mixins/home/h-images/main.jade
@@ -1,3 +1,6 @@
+include ../promocion/main
+
 mixin h-images()
 	.h-images.margin15(class='row')
-		img.margin-top20(src='img/background.jpg')
+		img.margin-top96(src='img/background.jpg')
+		+promotion()
