--- a/dev/css/main.styl
+++ b/dev/css/main.styl
@@ -6,10 +6,39 @@
 /***********
 CONTAINER-FLUID
 ***********/	
-.container-fluid 
+.container-fluid
+	.margin-top-20
+		margin-top 20px
+	
+	.margin-bottom-20
+		margin-bottom 20px
+		 
 	.margin15
 		margin-left -15px
 		margin-right -15px
 
 	.margin-top20
 		margin-top -20px
+		
+	.margin-top96
+		margin-top -96px
+		
+	.position-fixed 
+		position fixed
+	
+	.blue-1 
+		background #87a9ccd4
+	
+	.yellow-1 
+		background #ffeb3bd1
+		
+	.gray
+		color gray
+		
+	.color-black
+		color black
+		
+	.color-white
+		color white
+	.center
+		text-align center
