--- a/dev/js/directives/navbar/main.styl
+++ b/dev/js/directives/navbar/main.styl
@@ -1,19 +1,24 @@
 .container-fluid
 	.my-navbar
 		nav
-			background #fff
-			a
+			line-height 77px
+			height 77px
+			z-index 9
+			
+			a.brand-logo
 				color gray
+				img 
+					width 160px
 			ul
 				li
 					a
-						color gray
+						color white
 						
 						i.material-icons
 							font-size 1.5rem
-							line-height 60px
+							line-height 77px
 
 						&:hover
-							color #3F51B5
+							color black
 							background none
 			
