--- a/dev/js/directives/navbar/tpl.jade
+++ b/dev/js/directives/navbar/tpl.jade
@@ -1,8 +1,10 @@
 .my-navbar(class="row").margin15
-	nav(
+	nav.position-fixed.blue-1(
 		class="nav-wrapper"
 	)
-		a(href="#!" class="brand-logo") Logo
+		a(href="#!" class="brand-logo")
+			div(class="text-xs-center")
+				img(src="img/logo.png" class="img-fluid")
 		ul(class="right hide-on-med-and-down")
 			li
 				a(href="") Home
