--- a/dev/_mixins/home/promocion/main.jade
+++ b/dev/_mixins/home/promocion/main.jade
@@ -1,6 +1,25 @@
-include collection/main
+mixin promotion() 
+	.promotion.blue-1(class="row")
+		.col-1(class="col-xs-6").margin-top-20.margin-bottom-20
+			div(class="col-xs-12")
+				p.center.color-white Consulte por nuestras excelentes promociones
+				
+				div(class="col-xs-12").yellow-1
+					h1.center 40% DESCUENTO
+					h2.center BLANQUIAMIENTO
+					h2.center DENTAL
 
-mixin promotion(promotion) 
-	.promotion(class="row")
-		+collection(promotion.promotions)
-		
+		.col-2(class="col-xs-6")
+			img(
+				class="img-responsive"
+				src="img/promociones/promo-image.png"
+			)
+
+		.ver(class="col-xs-12")
+			div(class="col-xs-8")
+				i.whatsapp.color-white(class="material-icons left") settings_phone
+				span.color-white Llámanos al: +52-55-5688-9927
+
+			div(class="col-xs-4")
+				button.yellow-1.color-black(class="waves-effect waves-light btn") Ver
+					i.color-black(class="material-icons right") send
