--- a/dev/_mixins/home/h-images/main.jade
+++ b/dev/_mixins/home/h-images/main.jade
@@ -1,6 +1,6 @@
 include ../promocion/main
 
 mixin h-images()
-	.h-images.margin15(class='row')
+	.h-images.margin15.margin-bottom-0(class='row')
 		img.margin-top96(src='img/background.jpg')
 		+promotion()
