--- a/dev/_mixins/main.styl
+++ b/dev/_mixins/main.styl
@@ -4,5 +4,8 @@
 @import 'home/h-images/main'
 @import 'home/promocion/main'
 
+@import 'redes/main'
+
 // JS
 @import '../js/directives/navbar/main'
+
