--- a/dev/_mixins/commons/footer/main.styl
+++ b/dev/_mixins/commons/footer/main.styl
@@ -1,19 +1,39 @@
-.general
+.container-fluid
 	.footer
-		background #f9f9f9
-		
-		.col-one
+		background #424242
+		margin-right -15px
+		margin-left -15px
+		text-align center
+		padding-bottom 20px
+			
+		.cols-footer
 			padding-top 20px
+			border-rigth 1px solid white
 			
 			p
 				padding 5px 0
 				
 				a
 					color #424242
+		
+			.col-one
+				border-right 1px solid white
+				color white
+			
+			.col-two
+				border-right 1px solid white
+
+		a
+			color white
 					
 
-			.redes
-				text-align right
-				
+			.redes				
 				> div
 					margin-right -15px
+	
+	.copyright
+		background #f9f9f9
+		margin-bottom 0
+		margin-left -15px
+		margin-right -15px
+		padding 10px
