--- a/dev/_mixins/home/promocion/main.jade
+++ b/dev/_mixins/home/promocion/main.jade
@@ -11,7 +11,7 @@ mixin promotion()
 
 		.col-2(class="col-xs-6")
 			img(
-				class="img-responsive"
+				class="img-circle img-responsive"
 				src="img/promociones/promo-image.png"
 			)
 
