--- a/dev/_mixins/main.styl
+++ b/dev/_mixins/main.styl
@@ -1,5 +1,6 @@
 @import 'commons/navbar/main'
 @import 'commons/footer/main'
+@import 'commons/info/main'
 
 @import 'home/h-images/main'
 @import 'home/promocion/main'
