--- a/dev/_mixins/commons/navbar/main.styl
+++ b/dev/_mixins/commons/navbar/main.styl
@@ -1,59 +1,32 @@
-.active
-	background white
-	border-bottom 2px solid white
+.nav-bar-2 
+	background tomato
 	
-	a 
-		color #FF5722
-		text-decoration none 
+	nav
+		z-index 9
+		height auto 
 		
-.general
-	.nav-bar
-		background #424242
-		
-		.menu	
-			div
-				border-bottom 2px solid #FF5722
-				padding 10px
+		a.brand-logo
+			color gray
+			img 
+				width 160px
 				
+		i.material-icons
+			display inline
+			float right
+		
+		ul
+			li
 				a
 					color white
-					float right
-				
-				img
-					float right
-					margin-right 5px
-					padding-top 2px
-					width 15px
 					
-		.home
-			div
-				&:first-of-type
-					@extend .active
-					
-		
-		.profiles
-			div
-				&:nth-of-type(2)
-					@extend .active
-					
-		
-		.contacts
-			div
-				&:nth-of-type(3)
-					@extend .active
-			
-		
-		.about
-			div
-				&:nth-of-type(4)
-					@extend .active
-		
-		
-	
-				
-		
-		
-	
+					i.material-icons
+						font-size 1.5rem
+						line-height 66px
 
-			
-			
+					&:hover
+						color black
+						background none
+		
+
+		.info-box
+			border-bottom 1px solid white
