--- a/dev/_mixins/main.jade
+++ b/dev/_mixins/main.jade
@@ -2,6 +2,7 @@ include commons/scripts/main
 include commons/head/main
 include commons/navbar/main
 include commons/footer/main
+include commons/info/main
 
 include home/h-images/main
 include home/promocion/main
