Fix (nav-bar2): New navbar

--- a/dev/_mixins/commons/navbar/main.jade
+++ b/dev/_mixins/commons/navbar/main.jade
@@ -7,7 +7,7 @@ mixin nav-bar-2()
 						div(class="text-xs-center")
 							img(src="img/logo.png" class="img-responsive")
 				
-				
+
 			div(class="col-md-9")
 				div(class="row")
 					.info-box(class="col-md-12")
@@ -22,7 +22,7 @@ mixin nav-bar-2()
 								a(href="") Servicios
 									i(class="material-icons left") assignment	
 							li
-								a(href="") Contacto
+								a(href="#/contact") Contacto
 									i(class="material-icons left") contacts
 
 
